<resources>
    <string name="app_name">Assignment03</string>
    <string name="Start_button">Start</string>
    <string name="Welocome">Welcome!!</string>
    <string name="Identification_info">Identification Info</string>
    <string name="Name">Name:</string>
    <string name="Email">Email:</string>
    <string name="Role">Role:</string>
    <string name="student">Student</string>
    <string name="Employee">Employee</string>
    <string name="Other">Other</string>
    <string name="IdentificationActivity_Nextbutton">Next</string>
    <string name="Enter_Name">Enter Name</string>
    <string name="Enter_Email">Enter Email</string>
    <string name="Demographic_Info">Demographic Info</string>
    <string name="demoeducation">Education:</string>
    <string name="marital_status">Marital Status:</string>
    <string name="Living_Status">Living Status:</string>
    <string name="Income">Income:</string>
    <string name="Education_Value">N/A</string>
    <string name="Marital_Value">N/A</string>
    <string name="Living_Value">N/A</string>
    <string name="Income_Value">N/A</string>
    <string name="Button_Education">Select</string>
    <string name="Button_Marital">Select</string>
    <string name="Button_Living">Select</string>
    <string name="Button_Income">Select</string>
    <string name="Button_Demographic_Next">Next</string>
    <string name="SelectEducationLevel">Select Education Level</string>
    <string name="EducationQuestion">What is the highest degree or level of education you have completed?</string>
    <string name="BelowHighSchool">Below High School</string>
    <string name="HighSchool">High School</string>
    <string name="BachelorsDegree">Bachelor\'s Degree</string>
    <string name="cancelbutton">Cancel</string>
    <string name="submitbutton">Submit</string>
    <string name="MastersDegree">Master\'s Degree</string>
    <string name="PhDorhigher">Ph.D. or higher</string>
    <string name="TradeSchool">Trade School</string>
    <string name="Prefernottosay">Prefer not to say</string>
    <string name="SelectMaritalStatus">Select Marital Status</string>
    <string name="MaritalQuestion">"What is your marital status? "</string>
    <string name="NotMarried">Not Married</string>
    <string name="Married">Married</string>
    <string name="PreferNotTOSay">Prefer not to say</string>
    <string name="CancelButton">Cancel</string>
    <string name="SubmitButton">Submit</string>
    <string name="SelectLivingStatus">Select Living Status</string>
    <string name="LivingStatusQuestion">Which of the following describes your living status?\n</string>
    <string name="Homeowner">Homeowner</string>
    <string name="Renter">Renter</string>
    <string name="Lessee">Lessee\t</string>
    <string name="Other_rent">Other</string>
    <string name="PreferNotToSay">Prefer not to say</string>
    <string name="CancelLivingStatusButton">Cancel</string>
    <string name="SubmitLivingStatusButton">Submit</string>
    <string name="HouseholdIncome">Household Income</string>
    <string name="HouseholdRange"><![CDATA[$50K to <$100K]]></string>
    <string name="CancelHouseholdButton">Cancel</string>
    <string name="SubmitHouseholdButton">Submit</string>
    <string name="Profile">Profile</string>
    <string name="ProfileName">Name:</string>
    <string name="ProfileEmail">Email:</string>
    <string name="ProfileRole">Role:</string>
    <string name="ProfileIncome">Income:</string>
    <string name="ProfileEducation">Education:</string>
    <string name="ProfileMaritalStatus">Marital Status:</string>
    <string name="ProfileLivingStatus">Living Status:</string>
</resources>