<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectLivingStatus">

    <TextView
        android:id="@+id/textViewLivingStatusHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/SelectLivingStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLivingStatusQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/LivingStatusQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLivingStatusHeading" />

    <RadioGroup
        android:id="@+id/radioGroupLivingStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLivingStatusQuestion">

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Homeowner" />

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Renter" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Lessee" />

        <RadioButton
            android:id="@+id/radioButton13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Other_rent" />

        <RadioButton
            android:id="@+id/radioButton14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PreferNotToSay" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonLivingStatusCancel"
        android:layout_width="133dp"
        android:layout_height="71dp"
        android:layout_marginBottom="24dp"
        android:text="@string/CancelLivingStatusButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupLivingStatus" />

    <Button
        android:id="@+id/buttonLivingStatusSubmit"
        android:layout_width="120dp"
        android:layout_height="73dp"
        android:layout_marginEnd="64dp"
        android:text="@string/SubmitLivingStatusButton"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLivingStatusCancel"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>