<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectMaritalStatus">

    <TextView
        android:id="@+id/textViewMaritalHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/SelectMaritalStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMaritalQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/MaritalQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMaritalHeading" />

    <RadioGroup
        android:id="@+id/radioGroupMarital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/textViewMaritalQuestion"
        app:layout_constraintTop_toBottomOf="@+id/textViewMaritalQuestion"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NotMarried" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Married" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PreferNotTOSay" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonMaritalCancel"
        android:layout_width="145dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/CancelButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupMarital"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonMaritalSubmit"
        android:layout_width="141dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/SubmitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonMaritalCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>